--- a/scripts/02_script.Rmd
+++ b/scripts/02_script.Rmd
@@ -17,7 +17,7 @@ library(ggthemes)
 library(plotly)
 ```
 
-### Henter inn besøkstistikk fra statisk fil hentet fra Google Analytics. Antall ansatte hentes fra statisk fil fra Arbeidstakerregisteret(via Stryk-08)
+#### Henter inn besøkstatistikk fra statisk fil hentet fra Google Analytics. Antall ansatte hentes fra statisk fil fra Arbeidstakerregisteret(via Stryk-08)
 
 Besøkstatistikken viser data fra 1. januar til 9. mars per år.
 
@@ -42,12 +42,12 @@ ga_pw_utdanningno_data <- as_tibble(read_delim("../data/ga_pw_utdanningno_data.t
 employment <- as_tibble(read_delim("../data/yrkesbeskrivelse_antall_ansatte.tsv", "\t"))
 emp <- employment %>%
       select(page_title, antall_ansatte) %>%
-      mutate(rank_ansatte= percent_rank(antall_ansatte), rank_ansatte_gruppe = ifelse(percent_rank(antall_ansatte)>.8, "Høyt antall ansatte", ifelse(percent_rank(antall_ansatte)>.3, "Middels antall ansatte", "Lavt antall ansatte")))
+      mutate(rank_ansatte= percent_rank(antall_ansatte)*100, rank_ansatte_gruppe = ifelse(percent_rank(antall_ansatte)>.8, "Høyt antall ansatte", ifelse(percent_rank(antall_ansatte)>.3, "Middels antall ansatte", "Lavt antall ansatte")))
 
 ga_pw_utdanningno_data <- left_join(ga_pw_utdanningno_data, emp, by= "page_title")
 
 ```
-### Finner de mest besøkte yrkessidene i 2021 og 2013
+### Finner de mest besøkte yrkessidene i 2013 og 2021
 
 
 ```{r, echo=F}
@@ -64,23 +64,23 @@ df.13 <- ga_pw_utdanningno_data %>%
   select(page_title, year, page_views_pst, page_views) %>%
   arrange(desc(page_views_pst))
 ```
-##2021
+#### 2013
 ```{r, echo=F}
 (top10.13 <- df.13$page_title)
 ```
-##2013
+#### 2021
 ```{r, echo=F}
 (top10.21 <- df.21$page_title)
 
 ```
-Sykepleier, ingeniør, psykolog, lege, advokat og helefagarbeider går igjen blant de 10 mest besøkte yrkene både i 2013 og 2021.Dette er statusyrker og/eller knyttet til helse. 
+Sykepleier, ingeniør, psykolog, lege, advokat og helefagarbeider går igjen blant de 10 mest besøkte yrkene både i 2013 og 2021. Fellesnevneren er at dette er statusyrker og/eller knyttet til helse. 
 
 
-### Ser på utviklingen i besøkssandel fra 2013 til 2021 for de mest besøkte yrkene i 2021 og 2013
+### Utviklingen i besøkssandel fra 2013 til 2021 for de mest besøkte yrkene i 2021 og 2013
 
- 
+Sykepleier er det klart mest besøkte yrket (med untak av i 2014 der ingeniør lå høyest). I 2021 har 67 400 (0,85 prosent av alle sidevisninger) besøkt yrketbeskrivelsen. Neste på lista er psykolog med 36 300 (0,46 prosent). Sykepleier har nesten dobbelt så mange besøk som psykolog. 
 
-```{r, echo=F}
+```{r, warning=FALSE, echo=F, fig.width=10}
 
 df.1 <- ga_pw_utdanningno_data %>%
   filter(page_views_pst < 1, page_type == "yrke") %>%
@@ -89,19 +89,21 @@ df.1 <- ga_pw_utdanningno_data %>%
 
 df.2 <- df.1[df.1$page_title %in% top10.21,]
 
-df.2 %>%
-  select(page_title, year, rank_ansatte, rank_ansatte_gruppe) %>%
-  filter(year == 2021) %>%
-  rename(Yrke = page_title)
+# df.2 %>%
+#   select(page_title, year, rank_ansatte, rank_ansatte_gruppe) %>%
+#   filter(year == 2021) %>%
+#   rename(Yrke = page_title)
 
 a <- ggplot(df.2, aes(x=as.character(year), y=page_views_pst*100, group= page_title, text= paste("Yrke:", page_title))) 
-            a <- a + geom_line(aes(color= page_title, label=rank_ansatte_gruppe, label2= rank_ansatte), size= 1) + xlab("År") + ylab("Prosentandel av sidevisninger") + labs(color= "Yrke", title="Utvikling til de mest besøkte yrkesbeskrivelsene i 2021")
+            a <- a + geom_line(aes(color= page_title, label=rank_ansatte_gruppe, label2= rank_ansatte), size= 1) + xlab("År") + ylab("Prosentandel av sidevisninger") + labs(color= "Yrke", title="Utvikling til de mest besøkte yrkesbeskrivelsene i 2021") +
+              ggthemes::theme_economist()
     
             ggplotly(a, tooltip = c("label", "label2","text"))
 ```
-Sykepleier er det klart mest besøkte yrket (med untak av i 2014 der ingeniør lå høyest). I 2021 har 67 400 (0,85 prosent) besøkt yrketbeskrivelsen. Neste på lista er psykolog med 36 300 (0,46 prosent). Sykepleier har nesten dobbelt så mange besøk som psykolog. 
 
-```{r, echo=F}    
+Ved å holde markøren over et yrke i grafen vises informasjon om antall ansatte med det yrket. Høyt antall ansatte er definert som de 20% yrkene med flest ansatte. Verdien rank_ansatt angir hvor vanlig yrket er fra 100 (yrket med flest ansatte) til 0 (yrket med færrest ansatte). 
+
+```{r, echo=F, warning=F, fig.width=10}    
     
 df.3 <- df.1[df.1$page_title %in% top10.13,]
 
@@ -112,17 +114,18 @@ df.3 <- df.1[df.1$page_title %in% top10.13,]
 
 b <- ggplot(df.3, aes(x=as.character(year), y=page_views_pst*100, group= page_title, text= paste("Yrke:", page_title))) 
       b <- b + geom_line(aes(color= page_title, label=rank_ansatte_gruppe, label2= rank_ansatte), size= 1) + xlab("År") + ylab("Prosentandel av sidevisninger") + 
-        labs(color= "Yrke", title="Utvikling til de mest besøkte yrkesbeskrivelsene i 2013")  
+        labs(color= "Yrke", title="Utvikling til de mest besøkte yrkesbeskrivelsene i 2013") +
+        ggthemes::theme_economist()
       ggplotly(b, tooltip = c("label", "label2","text"))
 
 
 ```
+De mest besøkte yrkesbeskrivelsene fra 2013 har med unntak av sykepleier gått ned eller stagnert målt etter prosentandel sidevisninger. Det kan forklares av at mange nye yrker har kommet inn i denne perioden. Det kan likevel nevnes at det er en klar nedgang i besøk for ingeniør og til dels siviløkonom.  
 
 
+<!-- ### Eksempel: Yrkesbeskrivelse sykepleier -->
 
-### Eksempel: Yrkesbeskrivelse sykepleier
-
-```{r df_sykepleier, include=FALSE}
+```{r df_sykepleier, include=FALSE, results='hide'}
 df_sykepleier <- ga_pw_utdanningno_data %>%
   filter(page_url=="/yrker/beskrivelse/sykepleier") %>% 
   select(year, page_views_pst, page_views) %>% 
@@ -132,7 +135,7 @@ df_sykepleier <- ga_pw_utdanningno_data %>%
 df_sykepleier
 ```
 
-```{r stolpediagram, echo=FALSE}
+```{r stolpediagram, include=F}
 # stolpediagram i Ggplot2
 # "year" på ordinalnivå for å vise alle år  
 ggplot(df_sykepleier, aes(x=as.character(year), y=page_views_pst*100)) +
@@ -145,9 +148,9 @@ ggplot(df_sykepleier, aes(x=as.character(year), y=page_views_pst*100)) +
 ```
 
 
-### Se på hvor endring i interesse fra 2013 til 2021 har vært størst
+### Hvilke yrketsbeskrivelser har størst endring i besøk mellom 2013 og 2021
 
-```{r}
+```{r, echo=F, include=F}
 
 df.4 <- ga_pw_utdanningno_data %>%
   filter(page_views_pst < 1, year == 2021 | year== 2013, page_type == "yrke") %>%
@@ -180,7 +183,24 @@ df.5.21 <- df.5[df.5$year == 2021,] #object for 2021
 diff.1 <- bind_rows(slice_head(diff,n=5), slice_tail(diff, n=5)) #looking only at a few
 diff.2 <- bind_rows(slice_head(diff,n=20), slice_tail(diff, n=20)) #looking only at some more 
 diff.2 <- left_join(diff.2, emp, by="page_title") # joining with employment data
- View(diff.2)
+ 
+diff.2 <-diff.2 %>%
+  select(-antall_ansatte) %>%
+  mutate_if(is.numeric, round,4) %>%
+  mutate(rank_ansatte = round(rank_ansatte, 1)) %>%
+  mutate(rank_ansatt_gruppe = word(rank_ansatte_gruppe, 1)) %>%
+  rename(yrke=page_title, endring_pst=increase_page_views_pst, rank_gruppe=rank_ansatt_gruppe) %>%
+  select(-rank_ansatte_gruppe)
+  
+```
+
+#### Tabell med de 40 yrkene med størst endring i prosentvise sidevisninger fra 2013 til 2021.
+
+De 20 første har størst økning (høyest økning først), mens de 20 siste har størst nedgang. Tabellen viser at det primært er yrker med mange ansatte som har de største endringene. Kun 7 yrker er under medianen av antall ansatte (rank_ansatt<50). 
+
+
+```{r, echo=F, warning=F, fig.width=10}
+knitr::kable(diff.2)  
   
 # Plot occupations with largest effect
 diff.long <- diff.1 %>% 
@@ -191,14 +211,19 @@ diff.long <- left_join(diff.long, emp, by="page_title")
 
       
 c <- ggplot(diff.long, aes(x=as.character(year), y=page_views_pst*100, group= page_title, text= paste("Yrke:", page_title))) 
-c <-   c + geom_line(aes(color= page_title, label= rank_ansatte_gruppe, label2= rank_ansatte), size= 1) + xlab("År") + ylab("Prosentandel av sidevisninger") + labs(color= "Yrke", title = "Endring i prosentandel sidevisinger til de yrkene m størst endring fra 2013 til 2021")
+c <-   c + geom_line(aes(color= page_title, label= rank_ansatte_gruppe, label2= rank_ansatte), size= 1) + xlab("År") + ylab("Prosentandel av sidevisninger") + labs(color= "Yrke", title = "Endring i prosentandel sidevisinger til de yrkene m størst endring fra 2013 til 2021") +
+  ggthemes::theme_economist()
 ggplotly(c, tooltip = c("label", "label2","text"))
                 
 
 ```
-### Ser på utvikling for utdanningsbeskrivelser
+Oppsummert ser vi at økningen er høyest for yrker innenfor omsorg og helse med relativt mange ansatte. Det er dermed ikke de best betalte yrkene/prestisjeyrker som har størst økningen i besøk. Likevel ser vi en økning for blant annet aksjemegler, pilot og advokat.  
 
-```{r}
+Besøksandelen har gått ned for yrker ned for annerkjente yrker med høyt antalle ansatte. Noen av disse har det vært oppmerksomhet rundt behov i tiden fremover feks: ingenør og dataingenør.  
+
+# Ser på utvikling for utdanningsbeskrivelser
+
+```{r, include=F}
 
 dfu.21 <- ga_pw_utdanningno_data %>%
   filter(page_views_pst < 1, year == 2021, page_type == "utdanningsbeskrivelse") %>%
@@ -207,18 +232,19 @@ dfu.21 <- ga_pw_utdanningno_data %>%
   arrange(desc(page_views_pst))
 
 dfu.13 <- ga_pw_utdanningno_data %>%
-  filter(page_views_pst < 1, year == 2013, page_type == "utdanningsbeskrivelse") %>%
+  filter(page_views_pst < 1, year == 2013, page_type == "utdanningsbeskrivelse", page_title!="") %>%
   slice_max(page_views_pst, n=10) %>%
   select(page_title, year, page_views_pst, page_views) %>%
   arrange(desc(page_views_pst))
 
 (top10.13u <- dfu.13$page_title)
+top10.13u <- na.omit(top10.13u)
 (top10.21u <- dfu.21$page_title)
 
 ```
 
-#Ser på prosentandel av sidevisninger over tid for de mest beøskte utdanningsbeskrivelsene i 2013 and 2021
-```{r}
+#### Utvikling i prosentandel av sidevisninger over tid for de mest besøkte utdanningsbeskrivelsene i 2013 and 2021
+```{r, echo=F, fig.width=10}
 dfu.1 <- ga_pw_utdanningno_data %>%
   filter(page_views_pst < 1, page_type == "utdanningsbeskrivelse") %>%
   select(page_title, year, page_views_pst, page_views) %>%
@@ -226,22 +252,30 @@ dfu.1 <- ga_pw_utdanningno_data %>%
 
 dfu.2 <- dfu.1[dfu.1$page_title %in% top10.21u,]
 
-e <- ggplot(dfu.2, aes(x=as.character(year), y=page_views_pst*100, group= page_title, text= paste("Yrke:", page_title))) 
+e <- ggplot(dfu.2, aes(x=as.character(year), y=page_views_pst*100, group= page_title, text= paste("Utdanning:", page_title))) 
             
-e <- e + geom_line(aes(color= page_title), size= 1) + xlab("År") + ylab("Prosentandel av sidevisninger") + labs(color= "Utdanningsbeskrivelse", title="Utvikling til de mest besøkte Utdanningsbeskrivelsene i 2021")
+e <- e + geom_line(aes(color= page_title), size= 1) + xlab("År") + ylab("Prosentandel av sidevisninger") + labs(color= "Utdanningsbeskrivelse", title="Utvikling til de mest besøkte Utdanningsbeskrivelsene i 2021") + ggthemes::theme_economist()
 ggplotly(e, tooltip = "text")
 
+```
+Økningen i besøk for utdanningsbeskrivelser følger det vi så for ykene. Sykepleie og psykologiutdanningen er mest besøkt. Disse yrkene lå også øverst i 2021. 
+Merk: Det er en datafeil for Sykpleier 2019 og Vidreutdanning for sykepleiere 2021. Fallet vi ser for disse to punktene er ikke reelt. 
+```{r, echo=F, fig.width=10}
+
 dfu.3 <- dfu.1[dfu.1$page_title %in% top10.13u,]
-f <- ggplot(df.3, aes(x=as.character(year), y=page_views_pst*100, group= page_title, text= paste("Yrke:", page_title))) 
-f <- f + geom_line(aes(color= page_title), size= 1) + xlab("År") + ylab("Prosentandel av sidevisninger") + labs(color= "Yrke", title="Utvikling til de mest besøkte Utdanningsbeskrivelsene i 2013")  
+f <- ggplot(dfu.3, aes(x=as.character(year), y=page_views_pst*100, group= page_title, text= paste("Utdanning:", page_title))) 
+
+f <- f + geom_line(aes(color= page_title), size= 1) + xlab("År") + ylab("Prosentandel av sidevisninger") + labs(color= "Utdanningsbeskrivelse", title="Utvikling til de mest besøkte Utdanningsbeskrivelsene i 2013") +
+  ggthemes::theme_economist()
 ggplotly(f, tooltip = "text")
 
 ```
+  
 
 
-### Se på hvor endringen i interesse har vært størst utdanningsbeskrivelser
+### Hvor endringen i interesse vært størst for utdanningsbeskrivelser
 
-```{r}
+```{r, include=F}
 
 dfu.4 <- ga_pw_utdanningno_data %>%
   filter(page_views_pst < 1, year == 2021 | year== 2013, page_type == "utdanningsbeskrivelse") %>%
@@ -269,6 +303,13 @@ dfu.5.21 <- arrange(dfu.5.21, page_title)
 #test that both years are sorted correct
   all.equal(dfu.5.13[,1], dfu.5.21[,1]) #should be true
   
+```
+Tilsvarende tabell som for yrkene. De 20 utdanningene med mest økning øverst og de med størst nedgang er de 20 nederste radene. Nesten alle utdanningene har en prosentvising økning. Det usikkert for meg hvordan dette har seg.  
+
+Handel og markedsføring og Økonomi og adminstrasjon har den klart største nedgangen. Derimot har Økonomisk-adminstrative fag en tydelig oppgang. De to sistnevnte virker kun som en navneendring og endringen mellom dem ser ikke reell ut. 
+  
+```{r, echo=F}
+  
 #new df with difference 2021 and 2013
   diff.u <- data.frame(dfu.5.13$page_title, dfu.5.13$page_views_pst, dfu.5.21$page_views_pst, dfu.5.21$page_views_pst-dfu.5.13$page_views_pst) 
     names(diff.u) <- c("page_title", "page_views_pst_13", "page_views_pst_21", "increase_page_views_pst")
@@ -276,6 +317,12 @@ dfu.5.21 <- arrange(dfu.5.21, page_title)
       
 diff.u1 <- bind_rows(slice_head(diff.u,n=5), slice_tail(diff.u, n=5)) #looking only at a few
 diff.u2 <- bind_rows(slice_head(diff.u,n=20), slice_tail(diff.u, n=20)) #looking only at some more 
- View(diff.u2)
-  
+
+diff.u2 <- diff.u2 %>%
+    rename(Utdanning=page_title, Endring_pst=increase_page_views_pst, '2013'=page_views_pst_13, '2021'=page_views_pst_21)
+
+
+knitr::kable(diff.u2)
+
+ 
 ```
