--- a/scripts/ga_api_import.Rmd
+++ b/scripts/ga_api_import.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "googleAnalyticsR API import"
-author: "hg"
-date: "9/17/2021"
+author: "hg og Tor Midtbø"
+date: "9/27/2021"
 output: html_document
 ---
 
@@ -35,18 +35,81 @@ Funksjonen `google_analytics()` henter data fra APIet hvis du ble autentisert i 
 ## Sampling 
 Skal det hentes komplette data, eller skal det benytte Analytics utvalg? Standard (default) er at det gjøres utvalg basert på noen få prosent av brukersesjonene. Hvis `anti_sample = TRUE` vil datasettet splittes opp i mindre datointervall, hentes komplett for så å sammenstilles som usampla datasett. Ulempen er at nedlastningskvoten raskere vil bli brukt opp (Undersøk hvor stor er den er?)
 
+## Tidsintervall
+Foreløbig er utrekket tilpasset brukerdata per år. Kun startår (må være fra 1.1) må spesifiseres  (i objektet first_date_first).
+
+
 ```{r}
 # ga_accounts <- ga_account_list() # lists one set of accounts
 # View(ga_accounts)
 
-# Hvilket datointervall skal det hentes data fra?
-start_date <- "2020-09-01" 
-end_date   <- "2021-09-01"
+
+first_date_first <- as.Date("2013-01-01")  #Definerer første dato brukerdata skal hentes fra
+last_date_first <- first_date_first+364 #Siste dato første år 
+num_year <- as.numeric(format(Sys.Date(), "%Y")) - as.numeric(format(first_date_first, "%Y")) #antall år til idag 
+
+
+(start_dates <- seq(first_date_first, by="12 months", length.out=num_year +1)) #henter ut alle startdatoer
+(end_dates <- c(seq(last_date_first, by="12 months", length.out=num_year), Sys.Date())) #henter ut alle sluttdatoer
+
 
 # hente de 10000 mest besøkte sidene fra intervall. 
 # sorter etter sidevisninger med mest populære på topp. 
-gadata <- google_analytics(ga_id,
-                      date_range = c(start_date, end_date),
+
+# se på dataene
+# gadata %>%  View(.)
+df <- data.frame(matrix(nrow=0,ncol = 8))
+colnames(df) <-                    c("pageviews", 
+                                  "uniquePageviews",
+                                  "entrances",
+                                  "entranceRate",
+                                  "bounceRate",
+                                  "exitRate",
+                                  "avgTimeOnPage",
+                                  "year")
+df$year <- as.character(df$year)
+df$pageviews <- as.numeric(df$pageviews)
+                                  
+ for (i in 1:length(start_dates)) {
+   print(c(start_dates[i], end_dates[i]))
+    tmp_df <- google_analytics(ga_id,
+                      date_range = c(start_dates[i], end_dates[i]),
+                      metrics = c("pageviews", 
+                                  "uniquePageviews",
+                                  "entrances",
+                                  "entranceRate",
+                                  "bounceRate",
+                                  "exitRate",
+                                  "avgTimeOnPage"
+                                  ),
+                      dimensions = "pagePath",
+                      # segments = myseg,
+                      order = order_type("pageviews", sort_order="DESCENDING"),
+                      anti_sample = FALSE, 
+                      max = 10000
+                      )
+
+    tmp_df["year"] <- format(start_dates[i], "%Y")
+
+  df <- bind_rows(df, tmp_df)
+  
+  # return(tmp_df)
+ }
+```
+
+Problem med at pageTitle kun er tilgjenglig fra data fra og med en dato i 2019. Denne informasjonen må derfor kobles på etterpå
+Henter ut fra 2020-2021 data. Det finnes sikkert bedre (og raskere) måter å hente denne infoen på. 
+
+```{r}
+ga21 <- google_analytics(ga_id,
+                      date_range = c("2020-01-01", "2021-12-31"),
+                      metrics = "pageviews",                                 
+                      dimensions = c("pageTitle", "pagePath"),
+                      anti_sample = FALSE, 
+                      max = 10000)
+
+ga21 <- google_analytics(ga_id,
+                      date_range = c(start_dates[9], end_dates[9]),
                       metrics = c("pageviews", 
                                   "uniquePageviews",
                                   "entrances",
@@ -61,28 +124,47 @@ gadata <- google_analytics(ga_id,
                       anti_sample = FALSE, 
                       max = 10000
                       )
+kob <- select(ga21, pagePath, pageTitle)
+kob <- dplyr::distinct(kob, pagePath,.keep_all = T)
+dat <- left_join(df, kob, by= "pagePath")
+```
 
-# se på dataene
-# gadata %>%  View(.)
+Ryddesteg for å få frem page_type. Navngir så tilpasser analyse.
+Beregner prosent av totalt antall sidevisninger per år per unike page_type
 
+```{r}
 # +page_type
 # kategorisere sider etter sidetype basert på url 
-gadata %>% 
+dat <- dat %>% 
   # legge til felt page_type som er tekst til venstre for andre / eller ? i pagePath
   mutate(page_type = str_extract(
     # fjerne nynorsk-prefiks
     (str_replace_all(pagePath, "/nn/", "/")), 
     "^/([^/?]{1,})"), .after = pagePath) %>% 
-  View(.)
+  mutate(page_type = replace(page_type, page_type == "/yrker", "yrke"))  %>% 
+  mutate(page_type = replace(page_type, page_type == "/studiebeskrivelse", "utdanningsbeskrivelse")) %>% 
+  group_by(year, page_type) %>% 
+  mutate(page_views_pst = pageviews/sum(pageviews)) %>% #prosentvis av sidehenvisninger per år og page_type 
+  ungroup()
+
+
+  
+
+
+# yrke <- dat %>% 
+#   filter(page_type == "yrke") 
+# 
+# d21 <- yrke %>% 
+#     filter(year == 2021) 
 
 
 ```
 # TODO  
  
 
-- legge til flere felt i datauttaket enn "pageTitle", "pagePath" og "pageviews"
-- skrive om til en funksjon som looper gjennom års-intervaller
-- legge til felt for år
+- legge til flere felt i datauttaket enn "pageTitle", "pagePath" og "pageviews" DONE
+- skrive om til en funksjon som looper gjennom års-intervaller DONE
+- legge til felt for år DONE
 - kjøre deskriptiv statistikk 
 
 - Feltnavn: Standardisere feltnav til GAnalytics sine feltnavn, ikke variabelnavnenene vi har funnet på.
